[package]
name = "fmm"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.0", features = ["persistence"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
bimap = { version = "0.6.3", features = ["serde"] }
egui = { version = "0.31.0", features = ["persistence"] }
egui_extras = "0.31.0"
indexmap = "2.7.0"
egui_dock = "0.16.0"